# cicd-tempy

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  versions.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  cd-build.yml  ci-build.yml  ci-docs.yml  ci-lint.yml  ci-release.yml  ci-test.yml  ci.yml  docs.yml  lint.yml  release.yml  test.yml
0.2/: 404.html
0.3/: index.html
0.3/api_reference/pytemplate/: index.html
latest/: 404.html  index.html
latest/api_reference/pytemplate/: index.html
src/cicd_tempy/: __init__.py
src/tempy/: __init__.py
tests/: test_hello.py
