[project]
name = "tempy"
version = "0.1.0"
description = "Templates for Python projects"
authors = [
    {name = "mo", email = ""},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
docs = [
    "mkdocs",
    "mike",
    "mkdocstrings[python]",
]
lint = [
    "ruff",
    "pyright",
]
dev = [
    "pre-commit>=4.1.0",
]

[tool.ruff]
line-length = 115
extend-exclude = []

[tool.ruff.lint]  # From https://github.com/pydantic/pydantic/blob/main/pyproject.toml
select = [
    'F',      # Pyflakes
    'E',      # pycodestyle (Error)
    'I',      # isort
    'D',      # pydocstyle
    'UP',     # pyupgrade
    'YTT',    # flake8-2020
    'B',      # flake8-bugbear
    'T10',    # flake8-debugger
    'T20',    # flake8-print
    'C4',     # flake8-comprehensions
    'PYI006', # flake8-pyi
    'PYI062', # flake8-pyi
    'PYI063', # flake8-pyi
    'PYI066', # flake8-pyi
]
ignore = ['D105', 'D107', 'D205', 'D415', 'E501', 'B011', 'B028', 'B904']
flake8-quotes = {inline-quotes = 'single', multiline-quotes = 'double'}
isort = { known-first-party = ['tempy', 'tests'] }
mccabe = { max-complexity = 14 }
pydocstyle = { convention = 'google' }

[tool.ruff.lint.per-file-ignores]
'tests/*' = ['D']

[tool.ruff.lint.extend-per-file-ignores]

[tool.ruff.format]
quote-style = 'single'

[tool.pyright]
include = ['src', 'tests']
exclude = []
strict = []
# enableExperimentalFeatures = true

[tool.codespell]
skip = '.git,env*,pdm.lock'
[tool.pdm]
distribution = true
